--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "cucumber-js"
+    "test": "cucumber-js -f @cucumber/pretty-formatter"
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
     "@cucumber/cucumber": "^11.0.0",
+    "@cucumber/pretty-formatter": "^1.0.1",
     "hamjest": "^4.1.0"
   }
 }
